Major Architectural refactoring pt.1